--- a/style.css
+++ b/style.css
@@ -1,20 +1,81 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,300&display=swap');
+
 .divider:after,
 .divider:before {
   content: "";
   flex: 1;
   height: 1px;
   background: #eee;
+  padding: 0px;
+  margin: 0px;
+}
+
+#titulo{
+  height: 80px;
+  color: aliceblue;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+
+}
+
+#listavazia{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  padding: 20px;
+  color: #cac6c6;
+}
+
+#listavazia p{
+  font-size: 20pt;
+}
+
+#listavazia i{
+  font-size: 70pt;
+  margin-bottom: 20px;
+  
+}
+
+.dev{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dev h6{
+  margin-bottom: 0px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.dev p{
+  margin-bottom: 0px;
+  font-family: 'Poppins', sans-serif;
+  font-style: italic;
+  font-size: 15px;
 }
 
 #icon-fechar{
   width: 25px;
+  cursor: pointer;
 }
 
 #icon-concluida{
   width: 20px;
+  cursor: pointer;
 }
 
 .done{
   text-decoration: line-through;
   background-color: rgb(209, 209, 209);
+}
+
+#icon-fechar:hover{
+  transform: scale(1.2);
+  transition: 0,5s;
+}
+#icon-concluida:hover{
+  transform: scale(1.2);
+  transition: 0,5s;
 }
